--- a/src/index.scss
+++ b/src/index.scss
@@ -16,9 +16,7 @@ body{
   font-family: $font-hei;
   font-size: 16px;
   line-height: 24px;  //最好在开始确定，否则后面改影响范围大
+  background-color: #f5f5f5;
 }
-.icon{
-  width: 24px;
-  height: 24px;
-}
+
 
