--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,9 @@ body{
   line-height: 24px;  //最好在开始确定，否则后面改影响范围大
   background-color: #f5f5f5;
 }
+button,input{
+  font: inherit;
+}
 :focus{
   outline: none;
 }
